--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "fuul-sdk": "file:sdk",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
