--- a/sdk/src/api/mocks/projects.json
+++ b/sdk/src/api/mocks/projects.json
@@ -27,8 +27,8 @@
         "Access to beta versions of new games",
         "Invite-only gaming tournaments"
       ],
-      "primaryColor": "#FF4500",
-      "secondaryColor": "#CC28F5"
+      "primaryColor": "#E684FF",
+      "secondaryColor": "#420771"
     },
     {
       "id": "3",
